--- a/webMetics/Views/Medallas/ListaMedallas.cshtml
+++ b/webMetics/Views/Medallas/ListaMedallas.cshtml
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
 
-                            <div class="mb-3" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 5px; border-radius: 5px;">
+                            <div class="mb-3" id="participantesContainer" style="max-height: 200px; overflow-y: auto; border: 1px solid #ccc; padding: 5px; border-radius: 5px;">
                                 @foreach (var participante in ViewBag.TodosLosParticipantes)
                                 {
                                     <div class="form-check participante-item">
@@ -126,6 +126,7 @@
                         {
                             <p>No hay participantes para seleccionar.</p>
                         }
+
                     </form>
                 </div>
             </div>
@@ -205,7 +206,7 @@ else
         var input, filter, container, elements, i, txtValue;
         input = document.getElementById("participanteSearch");
         filter = input.value.toUpperCase();
-        container = document.querySelector('#collapseAsignarMasiva .mb-3[style*="max-height"]'); // Selecciona el div con la lista de checkboxes
+        container = document.getElementById("participantesContainer"); // Selecciona el contenedor por su ID
         elements = container.getElementsByClassName("form-check");
         for (i = 0; i < elements.length; i++) {
             var label = elements[i].querySelector("label");
