fix: limite de tamaño para imagenes de medallas en vista de participantes

--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -118,7 +118,7 @@
                                         {
                                             <div class="d-flex flex-column">
                                                 <div class="medalla-item">
-                                                    <img src="~/images/medallas/@medalla" alt="@medalla" class="medalla-image" />
+                                                    <img src="~/images/medallas/@medalla" alt="@medalla" class="medalla-image" style="width: 164px; height: 164px; object-fit: contain;" />
                                                 </div>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" id="medallaSeleccionada" name="nombreMedalla" value="@medalla">
