--- a/webMetics/Views/Usuario/VerBitacoraAccesos.cshtml
+++ b/webMetics/Views/Usuario/VerBitacoraAccesos.cshtml
@@ -81,7 +81,7 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <label for="idUsuario" class="form-label">ID de Usuario</label>
-                                <input type="text" id="idUsuario" name="idUsuario" class="form-control" placeholder="Escribe el ID del usuario">
+                                <input type="text" id="idUsuario" name="idUsuario" class="form-control" placeholder="Escriba el ID del usuario">
                             </div>
                             <div class="col-md-6">
                                 <label for="diasAtras" class="form-label">Días Atrás</label>
