Arreglo de nombre de elemento en vista de bitacora

--- a/webMetics/Views/Usuario/VerBitacoraAccesos.cshtml
+++ b/webMetics/Views/Usuario/VerBitacoraAccesos.cshtml
@@ -130,7 +130,7 @@
                                     <p class="text-dark">@acceso.IdAccesoPK</p>
                                 </td>
                                 <td class="px-3 py-3 border-bottom border-gray-200 bg-white small">
-                                    <p class="text-dark">@acceso.IdUsuarioFK</p>
+                                    <p class="text-dark">@acceso.IdUsuario</p>
                                 </td>
                                 <td class="px-3 py-3 border-bottom border-gray-200 bg-white small">
                                     <p class="text-dark">@acceso.FechaHoraAcceso.ToString("yyyy-MM-dd HH:mm:ss")</p>
