--- a/webMetics/Views/Participante/FormularioParticipante.cshtml
+++ b/webMetics/Views/Participante/FormularioParticipante.cshtml
@@ -156,31 +156,27 @@ else
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function () {
+        $(document).ready(function () {
 
-        // Handle change event of area dropdown
-        $('#areaDropdown').click(function () {
+        // AREA -> DEPARTAMENTO
+        $('#areaDropdown').change(function () {
             var areaName = $(this).val();
-
-            // Clear departamento and unidadAcademica dropdowns
+            // Clear departamento and unidad dropdowns
             $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
             $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
             if (areaName !== '') {
-                // Make AJAX request to fetch departamentos for selected area
                 $.ajax({
                     url: '/Participante/GetDepartamentosByArea',
                     type: 'GET',
                     data: { areaName: areaName },
                     dataType: 'json',
                     success: function (data) {
-                        // Update departamento dropdown with fetched data
                         $.each(data, function (index, value) {
                             $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
                         });
                     },
                     error: function (xhr, status, error) {
-                        // Handle error
                         Swal.fire({
                             icon: 'error',
                             title: 'Error',
@@ -188,53 +184,28 @@ else
                         });
                     }
                 });
-                // Make AJAX request to fetch secciones for selected departamento
-                $.ajax({
-                    url: '/Participante/GetSeccionesByDepartamento',
-                    type: 'GET',
-                    data: { departamentoName: departamentoName },
-                    dataType: 'json',
-                    success: function (data) {
-                        // Update unidadAcademica dropdown with fetched data
-                        $.each(data, function (index, value) {
-                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle error
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching secciones: ' + error
-                        });
-                    }
-                });
             }
         });
 
-        // Handle change event of departamento dropdown
+        // DEPARTAMENTO -> SECCION/UNIDAD ACADEMICA
         $('#departamentoDropdown').change(function () {
             var departamentoName = $(this).val();
             var areaName = $('#areaDropdown').val();
 
-            // Clear unidadAcademica dropdown
             $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
             if (departamentoName !== '') {
-                // Make AJAX request to fetch secciones for selected departamento
                 $.ajax({
                     url: '/Participante/GetSeccionesByDepartamento',
                     type: 'GET',
                     data: { areaName: areaName, departamentoName: departamentoName },
                     dataType: 'json',
                     success: function (data) {
-                        // Update unidadAcademica dropdown with fetched data
                         $.each(data, function (index, value) {
                             $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
                         });
                     },
                     error: function (xhr, status, error) {
-                        // Handle error
                         Swal.fire({
                             icon: 'error',
                             title: 'Error',
