Cambio mensaje de login

--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -88,11 +88,9 @@
                                     </div>
                                 }
                             }
+                            <div class="text-center mb-1" style="font-size: 0.9rem;">
+								<b>Importante:</b> El SIMETICS <u>no</u> utiliza la misma contraseña del correo institucional.
 
-                            <div class="text-center mt-2">
-                                <small>
-                                    @Html.ActionLink("¿Olvidó su contraseña?", "FormularioRecuperarContrasena", "Participante")
-                                </small>
                             </div>
 
                             <div class="text-center mt-3">
@@ -103,7 +101,11 @@
                 </div>
                 <div class="card-footer text-center pt-2 pb-3" style="background-color: #333333; color: #fff; margin-bottom: 30px;">
                     <p class="fw-bold" style="font-size: 1rem;margin-top: 10px;">
-                        @Html.ActionLink("Acceda aquí para registrarse.", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Formulario de registro" })
+                        Si nunca se ha registrado puede
+                        @Html.ActionLink("registrarse aquí", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Formulario de registro" })
+                        , si ya lo ha hecho antes, puede enviarse una
+                        @Html.ActionLink("nueva contraseña aquí", "FormularioRecuperarContrasena", "Participante", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Recuperar contraseña" }).
+                        
                         <br />
                         Si tiene dudas o consultas, por favor envíelas al correo <a href="mailto:soporte.metics@ucr.ac.cr" class="text-white fw-bold" style="text-decoration: none;">soporte.metics@ucr.ac.cr</a>.
                         <br />
