--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -102,8 +102,8 @@
                 <div class="card-footer text-center pt-2 pb-3" style="background-color: #333333; color: #fff; margin-bottom: 30px;">
                     <p class="fw-bold" style="font-size: 1rem;margin-top: 10px;">
                         Si nunca se ha registrado puede
-                        @Html.ActionLink("registrarse aquí", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Formulario de registro" })
-                        , si ya lo ha hecho antes, puede enviarse una
+                        @Html.ActionLink("registrarse aquí", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Formulario de registro" }).
+                        Si ya lo ha hecho antes, puede enviarse una
                         @Html.ActionLink("nueva contraseña aquí", "FormularioRecuperarContrasena", "Participante", null, new { @class = "text-white fw-bold text-decoration-underline", aria_label = "Recuperar contraseña" }).
                         
                         <br />
