--- a/webMetics/Views/Participante/FormularioParticipante.cshtml
+++ b/webMetics/Views/Participante/FormularioParticipante.cshtml
@@ -156,75 +156,63 @@ else
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 <script type="text/javascript">
-        $(document).ready(function () {
 
-        var currentAreaRequest = null;
-        // AREA -> DEPARTAMENTO
-        $('#areaDropdown').change(function () {
-            var areaName = $(this).val();
-
-            // Cancelar petición anterior si existe
-            if (currentAreaRequest) {
-                currentAreaRequest.abort();
-            }
-
-            // Clear departamento and unidad dropdowns
-            $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
-            $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
-
-            if (areaName !== '') {
-                $.ajax({
-                    url: '/Participante/GetDepartamentosByArea',
-                    type: 'GET',
-                    data: {
-                        areaName: areaName,
-                        _: new Date().getTime() // Evita cache
-                    },
-                    cache: false, // Evita cache
-                    dataType: 'json',
-                    success: function (data) {
-                        $.each(data, function (index, value) {
-                            $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching departamentos: ' + error
-                        });
-                    }
+    var areasData = null;
+    // Cargar datos de áreas, departamentos y secciones al iniciar la página
+    $(document).ready(function() {
+        $.ajax({
+            url: '/Participante/GetAllAreasData',
+            type: 'GET',
+            cache: true, // Guardar la respuesta en cache
+            dataType: 'json',
+            success: function (data) {
+                areasData = data;
+				// Habilitar los dropdowns después de cargar los datos
+                $('#areaDropdown, #departamentoDropdown').prop('disabled', false);
+            },
+            error: function (xhr, status, error) {
+                $('#areaDropdown, #departamentoDropdown').prop('disabled', false);
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'Error loading form data: ' + error
                 });
             }
         });
+    });
 
-        // DEPARTAMENTO -> SECCION/UNIDAD ACADEMICA
-        $('#departamentoDropdown').change(function () {
-            var departamentoName = $(this).val();
-            var areaName = $('#areaDropdown').val();
+    // AREA -> DEPARTAMENTO
+    $('#areaDropdown').change(function () {
+        var areaName = $(this).val();
 
-            $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
+		// Limpiar dropdowns de seccion y departamento
+        $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
+        $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
-            if (departamentoName !== '') {
-                $.ajax({
-                    url: '/Participante/GetSeccionesByDepartamento',
-                    type: 'GET',
-                    data: { areaName: areaName, departamentoName: departamentoName },
-                    dataType: 'json',
-                    success: function (data) {
-                        $.each(data, function (index, value) {
-                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching secciones: ' + error
-                        });
-                    }
+        if (areaName !== '' && areasData && areasData.departamentosByArea[areaName]) {
+            var departamentos = areasData.departamentosByArea[areaName];
+            $.each(departamentos, function (index, value) {
+                $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+            });
+        }
+    });
+
+    // DEPARTAMENTO -> SECCION
+    $('#departamentoDropdown').change(function () {
+        var departamentoName = $(this).val();
+        var areaName = $('#areaDropdown').val();
+
+        $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
+
+        if (departamentoName !== '' && areaName !== '' && areasData) {
+            var key = areaName + '|' + departamentoName;
+            var secciones = areasData.seccionesByDepartamento[key];
+
+            if (secciones) {
+                $.each(secciones, function (index, value) {
+                    $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
                 });
             }
-        });
+        }
     });
 </script>
