Arreglo de asignación de medallas en lista de participantes de módulo

--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -221,11 +221,10 @@
 										<tr>
 											<td class="text-center p-2">
 												<div class="form-check">
-													<input type="checkbox" class="form-check-input participant-checkbox"
+													<input type="checkbox" class="form-check-input participante-checkbox"
 														   name="participantesSeleccionados"
 														   value="@participante.idParticipante"
 														   id="participante_@participante.idParticipante"
-														   form="formAsignarMedallas formEliminarInscripciones"
 														   onchange="updateSelectedCount()">
 												</div>
 											</td>
@@ -486,6 +485,20 @@ else
 			}
 		}
 	}
+
+	document.getElementById('formAsignarMedallas').addEventListener('submit', function(e) {
+		// Obtener todos los checkboxes seleccionados
+		const checkboxes = document.querySelectorAll('.participante-checkbox:checked');
+
+		// Crear inputs ocultos para cada participante seleccionado
+		checkboxes.forEach(checkbox => {
+			const input = document.createElement('input');
+			input.type = 'hidden';
+			input.name = 'participantesSeleccionados';
+			input.value = checkbox.value;
+			this.appendChild(input);
+		});
+	});
 
 	document.addEventListener('DOMContentLoaded', function () {
 		updateSelectedCount();
