Cambio de paginación en tabla para listar participantes en modulos

--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -515,6 +515,7 @@ else
 			url: '//cdn.datatables.net/plug-ins/2.1.7/i18n/es-ES.json',
 		},
 		"searching": false,
-		"pageLength": 10
+		"pageLength": -1,
+		"lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]]
 	});
 </script>
